--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Capitals Weather App</title>
+    <title>Weather App-Nathan Hor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Weather App Container -->
     <div class="weather-app">
-        <h1>World Capitals Weather</h1>
+        <h1>Weather App by Nathan Hor</h1>
         <!-- Search Bar -->
         <div class="search-container">
             <input type="text" id="search-input" placeholder="Enter city or country...">
