comments and background

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Weather App Container -->
+    <!-- Container for the weather application -->
     <div class="weather-app">
         <h1>Weather App by Nathan Hor</h1>
-        <!-- Search Bar -->
+        <!-- Initiating Search Bar -->
         <div class="search-container">
             <input type="text" id="search-input" placeholder="Enter city or country...">
             <button id="search-btn">Search</button>
         </div>
-        <!-- Loading Spinner -->
+        <!-- Inititating Loading Spinner -->
         <div id="loading-spinner" class="spinner hidden"></div>
-        <!-- Error Message -->
+        <!-- Handling errors - Error Message -->
         <div id="error-message" class="error hidden"></div>
-        <!-- Weather Display -->
+        <!-- Display weather information and images -->
         <div id="weather-display" class="weather-display hidden">
             <img id="weather-icon" src="" alt="Weather Icon" class="weather-icon">
             <div id="weather-info"></div>
